# python-project-49

./: .gitignore  Makefile  README.md  ascicalc  ascieven  ascigcn  asciprime  asciprogression  cast1.cast  pyproject.toml  run_calc.py  run_even.py  run_gcd.py  run_prime.py  run_progression.py
brain_games/: cli.py  run_calc.py  run_games.py  run_gcd.py  run_progression.py
brain_games/engine/: game_manager.py
brain_games/games/: brain_games.py  calc_game.py  even.py  even_game.py  gcd_game.py  prime_game.py  progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  castCalc.cast  castCalc2.cast  castCalc3.cast  castgame_calc.cast  castgame_calc1.cast  castgame_gcd1.cast  game_manager.py  run_calc.py  run_even.py  run_gcd.py  run_gcd_game.py  run_prime.py  run_progression.py
brain_games/scripts/brain_games/: pyproject.toml
brain_games/scripts/engine/: common_logic.py  game_manager.py
brain_games/scripts/games/: calc.py  calc_game.py  even_game.py  gcd_game.py  prime_game.py  progression_game.py
