[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = [{ name = "Светлана", email = "maltushw@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]

[project.scripts]
brain_games = "brain_games.scripts.brain_games:main"
brain_even = "brain_games.scripts.run_even:main"
brain_calc = "brain_games.scripts.run_calc:main"
brain_gcd = "brain_games.scripts.run_gcd_game:main"
brain_progression = "brain_games.scripts.run_progression:main"
