[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = [{ name = "Светлана", email = "maltushw@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]

[project.scripts]
brain_games = "run_games:main"
brain_even = "run_even:main"
brain_calc = "run_calc:main"
brain_gcd = "run_gcd:main"
brain_progression = "run_progression:main"
brain_prime = "run_prime:main"
