[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = [{ name = "Светлана", email = "maltushw@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games-cli"]

